--- a/src/routes/home/Home.scss
+++ b/src/routes/home/Home.scss
@@ -10,14 +10,16 @@
 @import '../../components/variables.scss';
 
 .root {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 .container {
   margin: 0 auto;
-  padding: 0 0 40px;
   max-width: $max-content-width;
+}
+
+.title {
+  margin-top: 0;
 }
 
 .news {
@@ -31,9 +33,10 @@
 
 .newsTitle {
   font-size: 1.125em;
+  text-decoration: none;
 }
 
 .newsTitle,
-.newsDesc {
+.newsImage {
   display: block;
 }
